--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,15 @@ build/
 *.tsbuildinfo
 
 # Environment variables & secrets
-.env
-.env.local
-.env.*.local
-.env.production
-.env.development
-.env.backup*
+# .env
+# .env.local
+# .env.*.local
+# .env.production
+# .env.development
+# .env.backup*
 
 # Firebase / service account keys (do NOT commit)
-gig-market-85c5e-firebase-adminsdk-fbsvc-*.json
+# gig-market-85c5e-firebase-adminsdk-fbsvc-*.json
 
 # Logs
 logs/
